Revision history for {{$dist->name}}

{{$NEXT}}

4.000     2013-03-24T05:25:29Z

  - Use BundleInspector plugin to determine prereq info and generate
    "roughly equivalent" ini configs in pod.
  - Include plugin version requirements in plugin specs as ':version'
    instead of 'use' statements (and get rid of the use statements).
  - Revert to basic Readme in dist
  - Generate README.pod (instead of markdown) in repo root for github
    (ReadmeAnyFromPod instead of ReadmeMarkdownFromPod + CopyReadmeFromBuild)
  - Remove 'disable_tests' and 'skip_prereqs' in favor of role-based
    '-remove' and 'AutoPrereqs.skip'
  - Add Tests::ChangesHasContent, CheckMetaResources, CheckPrereqsIndexed
  - Collect contributors from git and list in meta and pod
  - Collect =class_method pod commands

3.203     2011-12-10T00:02:58Z

  - Consume PluginRemover role to get '-remove' magically

3.202     2011-11-19T18:25:57Z

  - Put 'Changes' back into @Git's allow_dirty
  - Reorder plugins so ConfirmRelease is last BeforeRelease

3.201     2011-11-18T04:20:13Z

  - Use ReadmeMarkdownFromPod and CopyReadmeFromBuild to automate
    a more useful github readme
  - Load @Git bundle earlier (before releaser)

3.200     2011-10-19T23:49:56Z

  - Move some logic out into Config::MVP::Slicer
    and consume Dist::Zilla::Role::PluginBundle::Config::Slicer
  - Update tests

3.108     2011-10-03T13:59:32Z

  [Prereqs]
  - Pod::Weaver::Plugin::Encoding
  - By default just use MakeMaker; set 'builder' to 'mb' or 'both'
    for ModuleBuild and/or DualBuilders
  - Bump @TestingMania required version to 0.14
  - Don't require OurPkgVersion

  [Fixes]
  - s/CompileTests/Test::Compile/g
  - Stop pruning dist.ini; it should be a familiar file for people
  - Fix regexp to actually prune cover_db/

3.107     2011-08-16T23:01:28Z

  [Changes]
  - Use 'placeholder_comments' config attribute to decide how
    $VERSION and $AUTHORITY should work (default to false).

  [Prereqs]