@@ -72,14 +72,11 @@ sub mvp_bundle_config {
     # include Support section with various cpan links and github repo
     [ 'Support',     _exp('Support'),
       {
-        ':version' => '1.001',
+        ':version' => '1.005', # metacpan
         repository_content => '',
         repository_link => 'both',
-        # NOTE: it may be worth watching the module to see if more are added
-        # removed: 'anno' - anyone use this? ratings or bugs are probably better
-        # removed: 'forum' - does anyone use this?
-        # removed: 'kwalitee' - site has been broken for a while
-        websites => [ qw(search rt ratings testers testmatrix deps) ],
+        # metacpan links to everything else
+        websites => [ qw(metacpan) ],
       }
     ],
 
